<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/child_login"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etName"
            android:autofillHints="Name"
            android:hint="@string/your_name"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/etRefNumber"
            android:autofillHints="Reference number"
            android:hint="@string/reference_number"
            android:inputType="number"
            android:maxLength="4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"/>

        <Button
            android:id="@+id/btnLogin"
            android:text="@string/log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>