<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <TextView
        android:text="@string/welcome_to_shieldkids"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"/>

    <Button
        android:id="@+id/btnParent"
        android:text="@string/i_am_a_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnChild"
        android:text="@string/i_am_a_child"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>